# rpi-pedal

./: Cargo.toml
src/: amp.rs  app.rs  ble.rs  gui.rs  main.rs
web/: index.css  index.html  main.js
