[package]
name = "pedal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ringbuf = "0.3"
alsa = "0.9"
# gattrs = { git = "https://github.com/benarmstrongg/gattrs.git", branch = "main" }
# zbus = { version = "2.2.0", default-features = false }
tokio = { version = "1", features = ["full"] }
bluer = { version = "0.17", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
futures = "0.3"
