[package]
name = "pedal"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ringbuf = "0.3"
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11"
futures = "0.3"
serde_json = "1"
serde = { version = "1", features=["derive"] }
freya = "0.1"
dioxus = { version = "0.4", features = ["macro", "hooks"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", features = ["full"] }
